<resources>
    <string name="app_name">daily_planner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todays_activities">Today\'s Activities</string>
    <string name="rest_of_the_day">What will you do the rest of the X hours of the day?</string>
    <string name="notify">Will notify 1h ahead of time</string>
    <string name="close">x</string>
    <string name="delete">delete</string>
    <string name="time">Time</string>
    <string name="set_notification">Set Notification</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="end">Hours</string>
    <string name="sub_title">A small description</string>
    <string name="title">Your event\'s name</string>
    <string name="close_x">X</string>
    <string name="calendar">Calendar</string>
    <string name="edit_hour_range">Edit wake hours</string>
    <string name="start_the_day">Start the day</string>
    <string name="end_the_day">End the day</string>
</resources>
