<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/planner_item_rounded_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/input_title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_start" />

    <EditText
            android:id="@+id/input_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/sub_title"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/input_title"
            app:layout_constraintStart_toStartOf="@+id/input_title"
            app:layout_constraintTop_toBottomOf="@+id/input_title" />

    <TextView
            android:id="@+id/starting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="08:00"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_start"
            app:layout_constraintStart_toEndOf="@+id/text_start"
            app:layout_constraintTop_toTopOf="@+id/text_start" />

    <TextView
            android:id="@+id/text_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/start"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

    <SeekBar
            android:id="@+id/slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/hours"
            app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
            android:id="@+id/text_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/end"
            app:layout_constraintStart_toEndOf="@+id/starting_time"
            app:layout_constraintTop_toTopOf="@+id/starting_time" />

    <Button
            android:id="@+id/save_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/input_sub_title" />

    <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text='""'
            app:layout_constraintBottom_toBottomOf="@+id/text_end"
            app:layout_constraintStart_toEndOf="@+id/text_end"
            app:layout_constraintTop_toTopOf="@+id/text_end" />

    <Button
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorTransparent"
            android:text="@string/close_x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>