<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/startTheDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/start_the_day"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
            android:id="@+id/endTheDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_the_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startTheDay"
            app:layout_constraintTop_toTopOf="@+id/startTheDay" />

    <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="00"
            app:layout_constraintEnd_toEndOf="@+id/startTheDay"
            app:layout_constraintStart_toStartOf="@+id/startTheDay"
            app:layout_constraintTop_toBottomOf="@+id/startTheDay" />

    <Button
            android:id="@+id/buttonEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            app:layout_constraintEnd_toEndOf="@+id/endTheDay"
            app:layout_constraintStart_toStartOf="@+id/endTheDay"
            app:layout_constraintTop_toTopOf="@+id/buttonStart" />

    <Button
            android:id="@+id/buttonSaveTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/buttonEnd" />

</androidx.constraintlayout.widget.ConstraintLayout>